tests/fixtures/invalid/pow_dict_float_none.py
# Cannot call pow() with Dict[str, int], Float, None
x = pow({"a": 1}, 1.0, None)
